--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <junit.jupiter.version>5.8.1</junit.jupiter.version>
     <junit.platform.version>1.8.1</junit.platform.version>
     </properties>
@@ -71,22 +71,23 @@
                 </argLine>
             </configuration>
         </plugin>
+
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jar-plugin</artifactId>
             <version>3.1.0</version>
-            <configuration>
-                <archive>
-                    <!-- Configures the content of the created manifest -->
-                    <manifest>
-                        <!-- Adds the classpath to the created manifest -->
-                        <addClasspath>true</addClasspath>
-                        <!-- Specifies that all dependencies of our application are found -->
-                        <!-- Configures the main class of the application -->
-                        <mainClass>RunMitarbeiterverwaltung</mainClass>
-                    </manifest>
-                </archive>
-            </configuration>
+<!--            <configuration>-->
+<!--                <archive>-->
+<!--                    &lt;!&ndash; Configures the content of the created manifest &ndash;&gt;-->
+<!--                    <manifest>-->
+<!--                        &lt;!&ndash; Adds the classpath to the created manifest &ndash;&gt;-->
+<!--                        <addClasspath>true</addClasspath>-->
+<!--                        &lt;!&ndash; Specifies that all dependencies of our application are found &ndash;&gt;-->
+<!--                        &lt;!&ndash; Configures the main class of the application &ndash;&gt;-->
+<!--                        <mainClass>RunMitarbeiterverwaltung</mainClass>-->
+<!--                    </manifest>-->
+<!--                </archive>-->
+<!--            </configuration>-->
 
         </plugin>
     </plugins>
